--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 Stable versions
 ---------------
 
+4.2.0 ():
+	Changes by Ozkan Sezer:
+	- Fix libxmp detection in configuration script
+
 4.1.0 (20160719):
 	- Requires libxmp 4.4
 	- Add option to force tracker emulation
