make more suitable for pr

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -255,6 +255,10 @@ Display comment\&, if any\&.
 Change to previous sequence (subsong)\&.
 .IP "\fB>\fP" 
 Change to next sequence (subsong)\&.
+.IP "\fB^L\fP" 
+Clear the screen\&.
+.IP "\fBv\fP" 
+Toggle compact display mode\&.
 .PP 
 Interactive mode can be disabled using the \fB\-\-nocmd\fP command
 line option\&.
