--- a/Changelog
+++ b/Changelog
@@ -5,10 +5,14 @@ Stable versions
 	Changes by Özkan Sezer:
 	- Fix libxmp detection in configuration script
 	- Fix OS/2 and Amiga builds
+	- Build system improvements.
 	Changes by Emanuel Haupt:
 	- Make configure detect sndio on FreeBSD
 	Changes by Alice Rowan:
 	- Fix terminal output for MSYS2.
+	- Fix crash-on-exit in Windows audio output.
+	Changes by Cameron Cawley:
+	- Support compiling for Windows with OpenWatcom.
 
 4.1.0 (20160719):
 	- Requires libxmp 4.4
